--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ header {
 .form-check-label {
     color: white;
 }
-.card-body {
-    font-family: 'IBM Plex Sans Hebrew', sans-serif;
-    color: white;
+.card-header {
+    color: black;
 }
